# USM

./: GUIA_DETALLADA_WINDOWS.md  README.md  drupal_manager.py  pyproject.toml  requirements.txt
config/: default.yml  linux.yml
core/: orchestrator.py
lamp_manager/: cli.py
lamp_manager/core/: config.py
lamp_manager/linux/: apache_manager.py  linux_stack_manager.py  mysql_manager.py  php_manager.py
lamp_manager/platform/: detector.py
services/: base_service.py
services/apache/: apache_manager.py
services/mysql/: mysql_manager.py
tests/: test_config.py  test_detector.py  test_platform_detector.py  test_validators.py
unified_stack_manager/: cli.py
unified_stack_manager/core/: base_stack_manager.py  config.py  logger.py  rollback.py  validators.py
unified_stack_manager/linux/: apache_manager.py  mysql_manager.py  php_manager.py  stack_manager.py
unified_stack_manager/platform/: detector.py  package_manager.py
unified_stack_manager/windows/: stack_manager.py
unified_stack_manager/windows/legacy/: drupal_manager.py  httpd-vhosts.conf
unified_stack_manager/windows/legacy/services/mysql/: mysql_manager.py
wamp_manager/: main.py  mysql_manager.py  php_manager.py
wamp_manager/services/php/: php_manager.py
